More theme fixes

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/Resources/BoxResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/Resources/BoxResources.resx
@@ -124,7 +124,7 @@
     <value>Class Feed</value>
   </data>
   <data name="Follow" xml:space="preserve">
-    <value>Follow</value>
+    <value>Join class</value>
   </data>
   <data name="Items" xml:space="preserve">
     <value>Documents</value>
