Few more bug fixes in the new theme

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Resources/GeneralResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Resources/GeneralResources.resx
@@ -172,7 +172,7 @@
     <value>Search for documents, classes</value>
   </data>
   <data name="NoResultsTitle" xml:space="preserve">
-    <value>we came UP short...
+    <value>we came up short...
 </value>
   </data>
   <data name="Download" xml:space="preserve">
