--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Resources/GeneralResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Resources/GeneralResources.resx
@@ -202,4 +202,10 @@ but try checking the documents tab for related material</value>
   <data name="View" xml:space="preserve">
     <value>View</value>
   </data>
+  <data name="BrowseClasses" xml:space="preserve">
+    <value>Browse classes</value>
+  </data>
+  <data name="SearchPartial" xml:space="preserve">
+    <value>Search</value>
+  </data>
 </root>
