--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/Resources/BoxResources.he.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/Resources/BoxResources.he.resx
@@ -195,4 +195,7 @@
   <data name="SingleComment" xml:space="preserve">
     <value>הצג תגובה נוספת</value>
   </data>
+  <data name="JoinClass" xml:space="preserve">
+    <value>עקוב</value>
+  </data>
 </root>
