--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Resources/GeneralResources.he.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Resources/GeneralResources.he.resx
@@ -205,4 +205,7 @@
   <data name="SearchPartial" xml:space="preserve">
     <value>חיפוש</value>
   </data>
+  <data name="SearchMobile" xml:space="preserve">
+    <value>חפש</value>
+  </data>
 </root>
