gamification and email resource fixes

--- a/Zbang.Zbox.Infrastructure.Mail/Resources/EmailResource.resx
+++ b/Zbang.Zbox.Infrastructure.Mail/Resources/EmailResource.resx
@@ -127,7 +127,7 @@
     <value>Invite to {0}</value>
   </data>
   <data name="item" xml:space="preserve">
-    <value>Docuemnt</value>
+    <value>Document</value>
   </data>
   <data name="items" xml:space="preserve">
     <value>Documents</value>
