--- a/Zbang.Cloudents.Mvc4WebRole/Js/Resources/JsResources.he.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Js/Resources/JsResources.he.resx
@@ -217,7 +217,7 @@
     <value>בקש גישה</value>
   </data>
   <data name="privateDepPopupTitleOnSend" xml:space="preserve">
-    <value>בקשתך לקבלת גישה נשלחה בצלחה</value>
+    <value>בקשתך לקבלת גישה נשלחה בהצלחה</value>
   </data>
   <data name="siteName" xml:space="preserve">
     <value>ספיטבול</value>
