--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Resources/GeneralResources.he.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Resources/GeneralResources.he.resx
@@ -208,4 +208,7 @@
   <data name="SearchMobile" xml:space="preserve">
     <value>חפש</value>
   </data>
+  <data name="Class" xml:space="preserve">
+    <value>קורס</value>
+  </data>
 </root>
