create class in course choose

--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/Resources/UniversityResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/Resources/UniversityResources.resx
@@ -198,7 +198,7 @@ Spitballing with your classmates</value>
     <value>Let us help you find your classes</value>
   </data>
   <data name="OnboardingHeaderStep2" xml:space="preserve">
-    <value>Select your first class</value>
+    <value>Add Your Class</value>
   </data>
   <data name="OnboardingHeaderStep3" xml:space="preserve">
     <value>Good job!</value>
