--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Resources/IndexResources.he.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Resources/IndexResources.he.resx
@@ -172,7 +172,7 @@
     <value>הגדרות</value>
   </data>
   <data name="Signup" xml:space="preserve">
-    <value>הירשם</value>
+    <value>הרשם</value>
   </data>
   <data name="Suggested" xml:space="preserve">
     <value>מומלצים</value>
