--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Resources/GeneralResources.he.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Resources/GeneralResources.he.resx
@@ -211,4 +211,7 @@
   <data name="Class" xml:space="preserve">
     <value>קורס</value>
   </data>
+  <data name="Remove" xml:space="preserve">
+    <value>הסר</value>
+  </data>
 </root>
