--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/Resources/UniversityResources.he.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/Resources/UniversityResources.he.resx
@@ -201,7 +201,7 @@
     <value>לסיום התהליך</value>
   </data>
   <data name="ClassChooseYellowTitle1" xml:space="preserve">
-    <value>הוספת קורס</value>
+    <value>הוספת</value>
   </data>
   <data name="OnboardingHeaderStep1" xml:space="preserve">
     <value>להשלמת תהליך ההרשמה עליך לבחור קורסים</value>
