--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Resources/FlashcardResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Resources/FlashcardResources.resx
@@ -133,7 +133,7 @@
     <value>Enter flashcard name</value>
   </data>
   <data name="FlashcardTitle" xml:space="preserve">
-    <value>Create a flashcard</value>
+    <value>Create a Flashcard</value>
   </data>
   <data name="Front" xml:space="preserve">
     <value>front</value>
