--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Resources/FlashcardResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Resources/FlashcardResources.resx
@@ -124,7 +124,7 @@
     <value>both</value>
   </data>
   <data name="CardsLabel" xml:space="preserve">
-    <value>cards</value>
+    <value>flashcards</value>
   </data>
   <data name="Edit" xml:space="preserve">
     <value>Edit</value>
