Ad sense is back in the site.

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Account/Resources/RegisterResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Account/Resources/RegisterResources.resx
@@ -125,7 +125,7 @@
   </data>
   <data name="ofZbang" xml:space="preserve">
     <value />
-  </data>
+  <comment>do not add english</comment></data>
   <data name="PrivacyPolicy" xml:space="preserve">
     <value>Privacy Policy</value>
   </data>
