--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Resources/FlashcardResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Resources/FlashcardResources.resx
@@ -160,7 +160,7 @@
     <value>You just studied</value>
   </data>
   <data name="LikeLabel" xml:space="preserve">
-    <value>Enjoy this set? give it a like:</value>
+    <value>Enjoy this set? give it a</value>
   </data>
   <data name="Over" xml:space="preserve">
     <value>over</value>
