--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Resources/FlashcardResources.he.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Resources/FlashcardResources.he.resx
@@ -166,7 +166,7 @@
     <value>כרטיסיה בשם זה כבר קיימת</value>
   </data>
   <data name="Shuffle" xml:space="preserve">
-    <value>שנה סדר כרטיסיות</value>
+    <value>שנה סדר</value>
   </data>
   <data name="Start" xml:space="preserve">
     <value>התחל</value>
