--- a/Zbang.Cloudents.Mvc4WebRole/Models/Account/Resources/LogOnResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Models/Account/Resources/LogOnResources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ConfirmPasswordComapre" xml:space="preserve">
+    <value>Passwords should match</value>
+  </data>
   <data name="EmailRequired" xml:space="preserve">
     <value>Please enter your email address</value>
   </data>
