--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Resources/FlashcardResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Resources/FlashcardResources.resx
@@ -198,4 +198,13 @@
   <data name="FlipDown" xml:space="preserve">
     <value>Flip down</value>
   </data>
+  <data name="FlashcardShareTitle" xml:space="preserve">
+    <value>Promote flashcard set</value>
+  </data>
+  <data name="FlashcardShareCopyUrl" xml:space="preserve">
+    <value>Copy this short url</value>
+  </data>
+  <data name="FlashcardShareSubtitle" xml:space="preserve">
+    <value>Share with others</value>
+  </data>
 </root>
