--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Resources/FlashcardResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Resources/FlashcardResources.resx
@@ -207,4 +207,10 @@
   <data name="FlashcardShareSubtitle" xml:space="preserve">
     <value>Share with others</value>
   </data>
+  <data name="FlashcardShareCopyLink" xml:space="preserve">
+    <value>Copy link</value>
+  </data>
+  <data name="FlashcardShareCopiedLink" xml:space="preserve">
+    <value>Link copied to clipboard</value>
+  </data>
 </root>
